Started conclusion section

--- a/AB_testing.ipynb
+++ b/AB_testing.ipynb
@@ -523,7 +523,7 @@
    "cell_type": "code",
    "execution_count": 149,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -539,23 +539,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 166,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "sorted(test_data.week.unique())"
+    "## 4. Conclusion:"
    ]
   },
   {
