--- a/AB_testing.ipynb
+++ b/AB_testing.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing duplicates. Keeping only first istance for each user"
+    "### Removing duplicates, keeping only first istance for each user"
    ]
   },
   {
