cCompleted missing value assignment

--- a/Missing_Values.ipynb
+++ b/Missing_Values.ipynb
@@ -605,7 +605,7 @@
    ],
    "source": [
     "# Missing financial values can be filled with corresponding mean of the state\n",
-    "\n",
+    " \n",
     "revenue_cols = [col for col in usedu_df.columns if 'REVENUE' in col]\n",
     "expenditure_cols = [col for col in usedu_df.columns if 'EXPENDITURE' in col]\n",
     "before_impute = (usedu_df.isnull().sum()/usedu_df.shape[0]*100).values\n",
@@ -615,6 +615,13 @@
     "impute_ind = (usedu_df.isnull().sum()/usedu_df.shape[0]*100).index\n",
     "for row in zip(impute_ind, before_impute, after_impute):\n",
     "    print('{0:<30}      {1:<12}      {2:<12}'.format(*row))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grade values is essential data that cannot be filled in"
    ]
   }
  ],
