feature engineering 1 and modified data cleaning 2

--- a/Data_Cleaning_2.ipynb
+++ b/Data_Cleaning_2.ipynb
@@ -1226,12 +1226,7 @@
     "    plt.title('{} vs. reading grades'.format(exam_df.columns[i]))\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -1240,7 +1235,7 @@
    "source": [
     "- Gender and test preperation course seem to correlate with average exam score.\n",
     "- Lunch also seems to correlate with average exam score. However, this is probably due to socioeconomical factors, which the lunch type is reflective of.\n",
-    "- Race/ ethnicicty and parental level of education show variability in average exam score"
+    "- Race/ ethnicicty and parental level of education show variability in average exam score and could have a role in success in exams."
    ]
   }
  ],
