commented necessary modifications to Data_Cleaning>Data Exploration required changes & started feature engineering 2

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -1996,6 +1996,8 @@
    "source": [
     "# Filling missing score values using MEAN and checking distribution\n",
     "\n",
+    "## has to modify earlier code so the dataframe copy proceeds interpolation ## \n",
+    "\n",
     "# maintain copy of original dataframe before dropping na's\n",
     "usedu_copy2 = usedu_copy.copy()\n",
     "usedu_copy2['AVG_MATH_4_SCORE'] = usedu_copy2.groupby('STATE')['AVG_MATH_4_SCORE'].transform(lambda x: x.fillna(x.mean()))\n",
