cused proper features and completed simple linear regression. Missing conclusion

--- a/Naive_Bayes_Sentiment_Analysis.ipynb
+++ b/Naive_Bayes_Sentiment_Analysis.ipynb
@@ -429,7 +429,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -458,6 +458,13 @@
     "# display results.\n",
     "print(\"Number of mislabeled points out of a total {} points : {}\".format( data.shape[0], (target != y_pred).sum()))\n",
     "print('Model sensitivity: {0:.0f}%'.format((1-181/748)*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How would using only pos and neg words compare to this model?"
    ]
   },
   {
