--- a/simple_linear_regression_house_price.ipynb
+++ b/simple_linear_regression_house_price.ipynb
@@ -1399,7 +1399,7 @@
     "id": "8ZNzXP23vNKs"
    },
    "source": [
-    "`LinearRegression()`'s `fit()` method runs the OLS algorithm by default. Since we get the parameters using OLS, we can write our estimated model:\n",
+    "Estimated model:\n",
     "\n",
     "$$ sale price = -1221267.08 + 21576.34*overallqual + 52.97*grlivarea +  16966.08*garagecars + 32.20*firstflrsf + -10908.41*fullbath + 298.73*yearbuilt + 277.25*yearremodadd\\qquad$$"
    ]
@@ -2053,6 +2053,13 @@
    "metadata": {},
    "source": [
     "### Assumption six: features shouldn't be correlated with the errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check normality of numerical features"
    ]
   },
   {
