edited simple house price model

--- a/simple_linear_regression_house_price.ipynb
+++ b/simple_linear_regression_house_price.ipynb
@@ -702,7 +702,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
    "metadata": {},
    "source": [
     "The p-values of both tests are lower than 0.05. So, the test results reject the null hypothesis which means our errors are heteroscedastic.\n",
-    "This is most likely because of the outliers seen in the lower right quadrant of the plot above. This can be resolved be removing these outliers or transforming the corresponding data."
+    "This could be due to ouliers in the data or lack of normality."
    ]
   },
   {
@@ -2053,13 +2053,6 @@
    "metadata": {},
    "source": [
     "### Assumption six: features shouldn't be correlated with the errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Check normality of numerical features"
    ]
   },
   {
