--- a/A:B_testing/AB_testing.ipynb
+++ b/A:B_testing/AB_testing.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "%matplotlib inline\n",
     "\n",
     "# import data file\n",
-    "file_path = '/Users/wesamazaizeh/Desktop/Thinkful_Main_Course/ab_data.csv'\n",
+    "file_path = '/Users/wesamazaizeh/Desktop/Thinkful_Main_Course/A:B_testing/ab_data.csv'\n",
     "test_data = pd.read_csv(file_path)"
    ]
   },
