Completed model comparison challenge, module 20.5

--- a/Linear_Regression/Linear_Regression_Challenge.ipynb
+++ b/Linear_Regression/Linear_Regression_Challenge.ipynb
@@ -876,7 +876,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -900,6 +902,13 @@
     "plt.show()\n",
     "\n",
     "# normality test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -978,7 +987,7 @@
     }
    ],
    "source": [
-    "# # Try model with ALL features\n",
+    "## Try model with ALL features\n",
     "\n",
     "data = house_price_df2[house_price_df2._get_numeric_data().columns.difference(['saleprice'])]\n",
     "target = np.log(house_price_df2['saleprice'])\n",
@@ -1112,7 +1121,7 @@
     "\n",
     "lasso_cv.fit(data_train, target_train)\n",
     "\n",
-    "# We are making predictions here\n",
+    "# making predictions\n",
     "target_preds_train = lasso_cv.predict(data_train)\n",
     "target_preds_test = lasso_cv.predict(data_test)\n",
     "\n",
