lRandom forest example with feature selection using random forest classifier

--- a/Random_Forest_Models/the_id3_algorithm.ipynb
+++ b/Random_Forest_Models/the_id3_algorithm.ipynb
@@ -128,8 +128,7 @@
     "\n",
     "# Tall.\n",
     "H_tall = 4 / 5 * log2(5 / 4) + 1 / 5 * log2(5 / 1)\n",
-    "H_[not_tall = 8 / 15 * log2(15 / 8) + 7 / 15 * log2(15 / 7)\n",
-    "\\]\n",
+    "H_[not_tall = 8 / 15 * log2(15 / 8) + 7 / 15 * log2(15 / 7)]\n",
     "entropy_tall = 5 / 20 * H_tall + 15 / 20 * H_not_tall\n",
     "\n",
     "\n",
@@ -225,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   },
   "toc": {
    "colors": {
