starting SVM classifier tests

--- a/Random_Forest_Models/Random_Forest_Challenge.ipynb
+++ b/Random_Forest_Models/Random_Forest_Challenge.ipynb
@@ -846,7 +846,8 @@
     "Accuracies aren't so good. How can the model be improved?\n",
     "\n",
     "How can features be selected confidently without having to run a heavy random forest classifier?\n",
-    "\n"
+    "\n",
+    "Would a regression model perform better?"
    ]
   },
   {
